リセットボタンの追加

--- a/Random Trifecta/Random Trifecta.resx
+++ b/Random Trifecta/Random Trifecta.resx
@@ -117,4 +117,166 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIAB7JAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
+        ck5UAc+id5oAACQ1SURBVHja7Z13eFRV+sdDU9eylrWsu/7Euuva1nVd14qKCgpSpNgRdUFXRHFFupEi
+        SO+EIpBKElJJSM8kmdSZSUJCIISEkJBAQhJCeqUl7++9yQQGyJTbZm55z/N8//FRnydz3u/nnnvO977H
+        qampaQcqh2RXHUOVospRDUadQ4EM1IhKR61CDXKiIe+Bk5gok8IjSVMJqD+SkwgAJPVqH6o/uYkAQFKv
+        3iE3EQBI6tUMchMBgCQH1Z+GppqKy9XUyPf/+z65SUkAOFUCLfu9SEIrywNa0jd3K20NtKQs61JrvDNq
+        HrRqZkNr1HfdCvsSWkM/71JbwDjUWGjzGwVt3kO65TEI2tyev6j2356A9m2PXa5N90P7xnvZactfoDVp
+        cTcobDN/PepmcpOCANB8NIF94ZDkrc0Pd0Goueoomyf/BdQIchIBgCRXbf0btCYugqbq42yX/dWoIeQi
+        AgBJjsJXBub1o3sPgPU7vzfqDnIQAYAkO+P/HVp0a6Gp7hQX4+tQL5FzCAAkuWnHP6HFsJGr8bNRb5Fj
+        CAAkmalt5zNdpw4sdvVNtR81GtWH3EIAIMnqif+00fg1XIxvYNJ9ZHwCAEmOm3vc3/GZeniDnEEAICPJ
+        TVse4bOrH02bewQAAoBcAzza+dB0+gQX44egniEnEAAIAHLTpvugNWoaNFcVsTV9J2o36glyAAGAACDH
+        nf2gD6H5eBZX4z9KlU+DACBH43u+Cs0FUWR8GgQAVWnb491Heo0NXN7xyfg0CACyfc+Pmc5lg0+Leo4q
+        nAYBQK7Lfe+h0Hwsja3xs+gLPRoEAFkv9x+FloytbJf7TJvxDyi5R4MAIGMx3X+aThWzMT4z5qCuo2qm
+        QQCQc24/N5BtJ55tqLuoimkQAOT81I/6DppqytmYP4lCPDQIAHLX9r9DS14oG+OfQn1K7/k0CABKeNc/
+        bXMPvg6UC3XepUEAUMIXe9mebJ76GainqVJpEABkf64/BJrLc201/hnmth1UP6pSGgQAuS/5NbPZdOZJ
+        RT1C1UmDACD7UM9j0HJoj63Gb0N9j+pLlUmDACD3Jb/Xa2yW/Gmoh6kiaRAAlLLLX1dla6DnJ3rXp0EA
+        UMjXey2pK2196hejnqUqpEEAUMQR31+gJTfIVvMH0rk+DQKAglJ9zcUpthj/HOprqjwaBADFtOkaBM0V
+        +baYvwz1b6o6GgQApZjf9x1bP+RhOvTcSRVHgwCgFPMHjrf1vr2tqAGOmuMySL8W9TDqOdQw1ATU96g5
+        qAWohah1Ri0wajbqO9THqLdRz6LuR11DriEA0DFfyERbzM8c8U21k8n7oh5CjTEa2AelQ1WgQEB1ospR
+        KShP1FzUCNR95CYCgDrMH/4VNDXUWTN/C+ptEQ1/J+pd1Aqj0VsFNjoXNaG0qCXGlcat5DACgLLMHzHF
+        ll59Vah/Cmz436GGGpfphyVgdltXCzmoZahXUQPIcQQApZu/CHW/QKa/2fi+HoZql4npLakZFYQazwCN
+        3EcAkNE7/6do/npr5s9F3S3Aht2HRtOfVYDpzakFtdu4f9CfnEgAkO5uv/8YWzb80lG38TD+E6j1qFoF
+        m96cmI3KX1EPkiMJANIy/643oKm2whbz38zB9MzO/ShUsgpNb04RqDfImQQAx5t/579suXqbtfmNG3rf
+        oArJ8GaVY9z/oNcDAoBjevc1l2ZaM38OG/MzIRrUf1EnyeA2qwg1kVktkVsJAPb7pNd6u+4iW6O9WLz9
+        UJNQJ8jQnHXYeHpALdEJAOKqJWWFNfOX23rUhwU7GHWQDCyYUlHPkHMJAOId91k2fzPqKRuMfx8qhAwr
+        WsDInUlDkoMJAMJt+rm/AE01FdYu6Bhmxfj9UdMlEs2FE6iMZh0ElSfDhvwEcM7SwNS0GPg4PgqGRYTD
+        0PBweHnPXng+qFuDQvfC0IgwGB4VDp9oI+FbfTT8nBMLLoUJEFKZDFmtOimBgDky/YJeCwgA/OXyADQf
+        01l7+k+1Yv6nUFmOMsShdj14HkuCWekaGBURCX/1CIUB64PAaW0gKqBb64xaz8i/WxtMtNHvkjYZ5bL7
+        Ml27zQ8e8w+CcfHh4Ixw8ClLhIJzekeCIIH5EIrcTADg/t6vW2/N/G5WNvmYz2fP2bPwc9HwLvla+Cg2
+        Gh5y3Qt9VqHZVzNCw68xkTUArLcCgE2XA8BpMyPfbm3pVr9tvvB4YBBMTImA7SUJkG9/IDDJwsnkaAIA
+        t6RfU6Ml8+9DXWfG/ANRSfYq9MTaNJihi4N/eIVD31XB4LQSDb/KRD0AuAoCVwBgnbAAcNraIx9w2uYD
+        /bf7wnN794DzgRi0Zpo9QcDsu9xBziYA2Katj1pr51WHGmjG/EyOvV7sos5o0sFMNP0jruHgtCL4klZK
+        FwAX9ZsP9PnNG54OCYKfc2Mgp11nr2jxi+RuAoD1pX/mb9aW/mPMLPkXi1nEpZ3p8NuRJHjNPxL6rtgD
+        TsuNugoAwb0AIMixANh6OQCcEABd2u4NA3b6wLC4UPAu13ZtUIr4G55HTSOHEwDML/39Rllb+m/rxfy3
+        oTRiFW7+GQM4pyfAn13CwGnZnm4tFwIAgeICYIttALioHbvgwQB/WJYfC0UXDGKCwBd1PTmdAHBF2u9+
+        aC7LsWT+QtT1V5ifabl1RIxCPdimh2+0cXDjmlBwWhrSLTEAwOkkQBwA9Og2b1+YcyAajpwXbeMwHXUX
+        uZ0AcCnwE+9syfydqJevMP9LqBqhi/MwPvG/TYyDG1btBadfQ7plCQDLewGAuX0AwQDgJzwATCGws1u3
+        efvAnINRcFScFUEp6lFyPAEA2nc8DU21lZYAsPEK848SujkH846/ZJ8Wbl2DS/0l+NT/NdQ8AJZJEQC7
+        2QPgN8sA6JKrF9zt5wsbi+PEgEAjA3JyvcoB0JK5w5L5T6BuNDE/0xa7Q8hC9C1JgYe3RnQbv0dyBcBm
+        KwDYxh4APXoqLAAiTicJDYE2prciOV+lAGjzfMVaX7/3TMz/taDBHXzPHx+qgT6Lcbm/OFReALD5JEA4
+        ADi5eUE/dy+YnBEm9P4AE9gaQ+5XIQBaDvpbvL1HLPNvPZwEf1gdDk6/MOZ3AADsdhTIEwA7va6CgJOb
+        J9wT4Au7K7RCQoBZ1Y0mAKgIAG1er1k69mM2/p4wmv8LwY71zhq6nvpOi/Z2m98UAIutAMDmkwDph4Gs
+        nQRYBkA3BPq4e8KXmeFwrMMg5EpgJAFAJQCw8vT3EPqdP+JkGty7MbLb/KICIFh6ANgqPACc3Lv1t1A/
+        SG5MEXJPYDABQOEAaHN/0dLTn7my+wEshCFCfdCzPCsRrlmMS/5FYUZdCYC9IgNAHmEgLgBgdKPPLth+
+        XJiTgvLOzM761mqmz0ODyrRUNQBoydxu8fJOLIS/G4+JeBVTSUc6vM8s+ReGdYsVAEIdAIAAywDYKE0A
+        OHngK4GHB0zNDhcIAlnQ0FJry0WvStI6dQBg22OW+vpfOH3m2HPGCy95fo9vgOfcYsBpQZhlAPxiBQBc
+        wkCrlBEGYgOAbnnA8KRgQcJDJztyoLG5gQCgNAC0xs8z+yPghPvj5GfyLZ60Oh08uDEKzR/ODQAUBjJ7
+        FGgNAE6eHvCPSH84cIb/l4aV5/MIAEoDQHPZQbM/wsnOrDC+RRN3Kg3uXh1pNL8KASByFqBXALibAMAI
+        gQdCfCGzlX/vgeqzxQQApQCgzW+k2R8Al/5FQuz0/2EFmn9+uLoA4OIAALhZBgCje4J8ILWJ/wlBbdtJ
+        AoCSY7/1rdXMRF/gUyRh5Wlw069G88sBAGvEbw0mOABc2QGA0d1B3rwhUNKhB/cjXrD5kKvsVdtQq1IA
+        uDwATTXlvb33w8mO/R38lv06+MNyfOf/OeISAOb3AoCFJgAQLAsQLMMwkLcoJwG9AcDJqxsCfF8H4uuC
+        4KXId+D5iGGyVmVdlToB0Bb8Ua9/+KlzR3gVRnKNifl7BUC4yACgMJA1ADh5ucN9IT6wv50fBNYWriAA
+        yHb5v+/q5T/zbsenIA606mHg2uhL5rcZAFIJAwUoJgxkDQCMnojcDYU8PiQ60WmAT9O+JADITwOh6VTJ
+        FUv/+q7AB9diOHrOAE//FgtOzhEiAoDCQEICwGmXO7yuDYTjndyhb2iOgEFRIwgAslr+ew/pZelfwOvp
+        P8IvDs0feTUATCEgFADUEgbiDQBPywAwQmDSvr285n7d0ZUEAFmFf7QLLvt76toqeRXAvJREcPop8hIA
+        nK0AgMJAdg8DXQ6BywHAaFOJhkcHJz28n/wZAUA24Z+CaJO/p5HZ9efewacoFfr9HEkAkEEYyBIAfrfb
+        E2LruXcYiq31JwDIo+PvfZf1/Dt9ppTzpOe0GOD2pdHd5icAyCIMZA4AjB4M8+a1KTg9ewYBQPrv/0NN
+        Nv7qmM89OU/465743j8vUjkAUEkY6MqNwIvydoOP00M418P+tlh4JXokAUDS7/8xP5ps/BVynuxFuiQ0
+        f9TlAPjJCgDmWwEAhYF4tAbzEgQAjLaf4N5LYNWRZQQAOcR/me+7yyCD0yTr6/Rw/YJoHgBwRBhIHa3B
+        hADAHUFecOgst68Hj5xPhjdixxAAJLsBeCyV97Hfy6649J8bJTAAwhyQBqQwUG8AYDRev4dzfWwoWkUA
+        kKqYDcCGltPcz3yzk7vNbxcAUBjIUQBg5FuVwKlGii6kwhDNOAKAJG/94fH0Zy7nvOPXmKsB0NtGoNhh
+        oKVSDAPJEAAWIPCXCJ+uW5q41Mr6o6sIAJI7AfAfAw3NdZzf/b+O0oLTnCjbAEBHgdzDQNsdEwa6ahXg
+        4wYLj0RxqpWCc0nwWvRoAoCkTgAip0L12SJubb1q9TDgp2gCgFgA2CZyGtCDAwBQNwd6wuFz3LIBi/IW
+        EAAkdQKQspTzuf/4gAQ0f28AiCIAKCgMdCUAmFXANzlhnGomuy0GXogcTgCQimpLAjlNpPaUDvrOjVYH
+        AFQTBrIdADf4e3DuHTAlYxoBQCqqaOPWCmqkb8/T/woA8DoJYBEG4gsA1YSBPAU/CWAAwGhydiin2gmu
+        8iQASOL83+9Vzu/+fS+aXyQAUBhIskeBPQC4wd8d8jiEg453GmBY/PsEAEfrdO4vnAAwMVQLTrPFAACF
+        geSQBegBAKNZeRGcamhFwVICgKO/ADzZxv5779xWA1znHONgAEglDOSvyjCQKQDuDPGEEg63D+uawggA
+        Dk3/hY7gRO6fk5O7zX8lAOZYA0CkPABAYaCrAdBLFuCifF1hywlujUPGJX1KAHDY8j9vKadJe3CV5hIA
+        ZlsBgL1OAn6lMJAgrcFYhIFMAfBSgp+i2oYpHwC4/C8/wz7THXgsDZxmxfQCAAoDybY1mAdPAPi4Qh+E
+        QGoz+9MkfXM4AcAhy//AIZyI/WGglgUAKAyklNZglvcBXLtWAdMPcbt2fGTCRwQAu4d/MmdxuPopHW5Z
+        GEsAoDBQrwB4KMKbEwDm5/5MALC3Kqt3s54oj/zUbvP3yBIA5nIAgCPCQCulmAXwkVUYqAcAjDQcGoiG
+        nPIiANj1458dj3Mi9fsBWn4AoDCQIsNApgD4/mAYpz4BUrtPUNEAaAwfywkAdy3W2AkAUgkDqfueQC4A
+        eDLGl1NtfZI6iQBgL9Vkz2M9QTEVOnCaGSMxADjinsBASgOaOQpk1He3K+ScYf+B0C95CwkAdnv/r/Ri
+        PUGztUndAJhpBQBKCQPxbQ2mwjBQj9aXxLCur4BKNwKAXeRyP5R1sP9447WdCeYBIJcw0HIpHgX6Si8M
+        5MUtDNSjjzLYNw490B5HALDL13++gzhc95wON/0cawMAKAyk5jBQDwC4HgcO0YwlAIiththP2N/v1vP+
+        zwkAFAZSUxiIEZMKPMjhE+FJhikEANE3ALPYbwCuykghAFBrMJsBwMi7Ml7WG4GKBcCp0q2sJ+Y/oUng
+        NKOXVwAxwkALJBgGWkNhILYAmJfPvkeA+4ktBADR23/Vs7/k8fmtCcIBQDJhoGAKA4kIgDH6YNZ1Fl3j
+        RwAQVwOh7AL7M9pb52scAABH3BNIYSChAPBolA/rOstqjSEAiBoBdn2K/a0/7YZu80sCABQGkkMYiNGN
+        Ae6sa620Uy+ZSLAiAdAU+Cb7BOBJHXsAUBhIua3BbMwCOHE8CRiZ8CEBQLRvACLGsZ6Q7bmpVwNAqDAQ
+        33sCxQgDrZJhGIg3AIQPAzEKr01kXW8T0iYTAMRSfcIXrCdkSVqKeACgo0BphYE8hQsDMdpRHsfhwpDv
+        CABiqU73HesJ+V9MEksAUBaAwkDdWlEczbreZubMJgBI6SvAicGJBAAKA3ECwJzD7LMAiw8vIgBI6RKQ
+        kbu0lwAwg8P3AHPpnkD5tgbjdxT41f69rOttTeEKAoBYqs5fznpChrpbAQCFgaR1T6CEsgD/yQolAMgd
+        AK/tSHAgACgMJOcw0HgD+zSgS/FaAoBo3wEc28Q+BrxFagCQShiI7gm0dhTIBQDbSjYQACQHgB/lCAAK
+        AxEACACXvwIUrmE9IS9uNQMAqYSBFlMYSKphIAKAUjYBxQQAHQWKeE/gLofcE9ijCZnsvzxdS5uAIh4D
+        Hl7GekLe4gQAygLIKgzkIU4WYFI2nQJIKwiUM5/9XYABiQQACgNxAsA0DpeELC/4lQAg2n2AGTPYZ7Mj
+        ki4HwIxYAoCqwkDcAbC4MIp1vTnnOhMARPsYKOlL1hMyT5tsHQD2CgPxbQ2mljCQRFqDuRyPZV1v32dN
+        JwCI1hE45iPWE7JuX6qDARBO9wTKtDWYb1UC63r7Qv9fAoBoDUFCR7CekMBinQQB4Ih7AikMxDYLkNac
+        wrrexidNJACIpRbvF1hPSHq9vhsAFAaiMBALAPTb7QYlnQbW9TY45l0CgFhq2/wg6wk53pkOA2bF2n4S
+        wLc1mBhhIL4AEOUkQNmtwe7Zy/7+yfxzidQUVGydbGW/MfPXVfEUBpJtGMjLIWGgVxL9WddZUkMIAUCK
+        NwOP9hYqDEQAUMs9gV/n7JX1DcGKBQCXOPDcK48CKQykjDCQiK3BNpSyX2muO7qSACB6X8CUKawnZldB
+        GoWBuABAxWGg+IZk1nX2Q/YMAoDoR4F7hnO6HKTvDIWEgawBgMJAvE8Cfh/oASc4XA8+NnECAUD024G2
+        P8bp7va/rY5XcGswCgMJCYDBHDYAiy+kwYuRwwkAdjkJaI5kPUGfmnYHpjAQtQazAIDZeey7AcfXBUnG
+        /IoHQPWR1fxuCKLWYHRPoAUAhNUkyrYXoCoAUJ84mf0+wBlDdyDIHmEgOaYBKQzUZf7bg704vf9/u+9/
+        BAB7qdnnZU77AF3tweQUBuLbGmylDFuDOTgMNE4fzKm2hmjGEQDspk0Dobyd/b1tPyclUxiIwkAWAbD5
+        uIZ1XaU1hUnK/MoHALMPULCK9UTta9RD35kUBqJ7AnsHwA1+HlB0gf0HQJuK1xAA7N4bIPYTTku1Zzcn
+        EACEBMAm5bQGG5kaxKmmJhmmEAAckwdgT+sluhRhTwL4AmCRBFuDrZNgGtAOYSA3DteBF55PgZci3yEA
+        OEJVFR6sJ+xwuwF+N1dDYSAKA10GgLuCvaC0k/3T36/CVXLmVw0A6pK+4rRkG++XSPcEUhjoMgBMOxDO
+        qZak0gNQlQBo3fkklHHo2hJ6XEdhIAoDXQRAXx83MLSkclj+J8OgqBEEAIe+BpTt5ETupzbE2w4AtYSB
+        1qkzDDQsmdvmn0/5dkmaX1UAqI/7lNPkbT2Yav97Ah0RBlpFYSBr9wSGnk7kVENfGr4hADi8T+CWh6H8
+        rJb15J3oTIeByzXUGkzlYaB/xfhzMv++1mh4QaLmVxUAuu4MPLCQ0ySu2ZdCWQCVh4F2VSRwqp1l+Usk
+        a37VAaDZ5yVOk1jakQ73r9AQAFR6T+DzGm5P/9JOPbwd9x4BQAmbgZtzUh0fBqJ7Au3UGuzyjcCgU1rF
+        bf6pFgCNe0dzmkxmL+CpjXEKCQMFUxjIRgAMSeS288/og+TPCQDS00CoqAngNKGhx9Ogz2wKA6klDHSN
+        jwekNadyqpXwah/Jm1+lALgXGjQTOFN9rJ+WwkAqCQNN3R/GuU6k+OEPAaBHLvdDRd0eThO7v9kAty6M
+        5QGASLonUAYA+L893lB4Xs+pRmJq/WVhfvUCgFkFRH/Ime5dx4Jih4EWUhjIPgC4OgzUBwHgw/HYj9Fn
+        uq8IAHLoFlR52o/zJA/aEU9hICWFgUwA8L4uhHNdyOXdnwDQdSIwivNEM12Dbl0UQ1kAhYWB7g32gfxz
+        eo4nRQb4MOULAoCcdKpkC2cI7MhLJQAoKAzU38sTQqoTOdeD6/HNsjI/AQDV4vVvKOvQcZ70CSFaCgMp
+        JAw0MzeScx0UnEuCoRLr+EsAsFE1WfM4T/yxC+nwD5c4x94TqJowEN/WYOZPAt6M5x74YbQob6HszE8A
+        MPlSsKKR+5lvZqMebl8SS2EgmYaBHtjjC4fP6rk//c9I674/AoCdbhM2VXBJGlzjTPcEyi0M9HvfXaBt
+        SOEx9xmwvcBVluYnAFz5uXDeUl4Q2HwwBfrMlUIakMJAtgBggKcXBFRpec159dli+DptBgFAEa8C2x6B
+        k03hvApiXnKS/cJAfAHgkDCQNADQB7WxWMNrris6DkBjUwO8Hj2WAKCYV4HAIZwaiJrqm2gthYHEDgNt
+        55cFWJwfw2uOyzszoaGlBnIqc2VrfgKAGdWmT+dVHIwm7tUSAIQGgEBZgDm5Ubznt6b9RJcXdhUEEgAU
+        p033QVW5G+8imRCaQGEgiYWB5hzkb/6q8/kXvfBj+gICgBLVuvMJONkcybtYpsRoKQwkgTBQH9TCwzG8
+        57OiIwcamxu6fNDQ2ABvxIwjAChVzX6DoexCGu+imZWYCH1+EjkMtITCQObCQP3wyb+6UMN7Hss793W9
+        9/f4QFeeIWvzEwBsuk9gIu/CYbQhJxkGzKd7Au3dGuxGL2/YVZ4gyBzWtVVc5oPVBzYTANSg2sxZghRQ
+        YEkq3LIkisJAdjoK/LOfL2jqkgWZu5r241f5YEz85wQAdWggVBesFKSQdHV6eNwlVqFhIH/JhIFeiAyC
+        /e06Qeas+mzRVR7Irjgge/NzB0BFAbSkLFOXUldAZX20IAVVdN4A7wXHSyMMtEJZYaA+qK8zIuB4Z7og
+        c1V1rqBXg6xSwPKfMwDUKmb3t/JCriCFxWhdTjLcuDjS/vcEKjQMdLu3L7ifSBBsfirPH2rvtQ6aGmGY
+        5iMCgFohUHHhoGBFpq/Xwb92xFIYiGdrsDdjQiBHoCU/o5Md2VlNaPTeakBTmqgI8xMAeEHggGDFxixX
+        5+sS4QZmNUCtwVhlAW713A1rC+MEmwujNDjH2ebmf5p+HgGAICDs6wAjQ4MeXveOVQYA7BAGGqvdCwcE
+        fOobFdLYXDfE3LwfrS6GFyKGEwBIRgicPyR0AYJHYQo8uDFK+DAQXwA4JAtwNQCe3BMIwZVJgv/uqF2o
+        fji3GnNzvjJnk2LMbwsAwlENJEtqbKg6n39O6GIs6UiHBYZEuG1FBIWBjAD4s7c/rDkSByeENz6j1ag+
+        OKevmjM/Y5bB0WPUAwAatg2mcFCLRChKOHLOAHNStXDbyggHh4EcB4A/evnD0jwNQtEghvE7UF/3zCUW
+        vt4cALbneSnK/AQA4UHwKeqcWCBw1mnhnvWRqrkn8CHfQFh2WANFF0QxPqMm1Fsm5h9pzvzV9afhrdj3
+        CQA0rELg36gykQoWSjvTweVQEvzLLUo+rcFYhIH6ovEHhYeAe6lWrKV+j/JQfzUx/7WoYnMA2HF4l+LM
+        TwAQDwJ3oOLKxC1g0NakwZeaOLh9Tbjw9wTa+SjwT56BMC09GvRNaSD274bajbrRdM6w4OeaM39FXSW8
+        GTOeAECDFQT6oRaiLohd0EyOYHdJCnwcoYFb1oTJJgtwl3sAfJ4cCcEVSWI/7Xt0BjX1yrnCYr8X1WoO
+        AEqJ/RIAHAOCF1DFZfYp8C4YBJelwPdJ8fCkWyT0XSodAPR38Ydng0JhZmYsRFWn2Mv0PcpBPdrbHGGx
+        R5kz/5HqIhgUNYoAQIMXBG5CuZbZt+C7lH/GALuKk2Fachy85BsFt60PtRsA7twZBK+FhsGMjFjwK0uC
+        wvMGcMBvwOzyr0Bda8b8n1nKevxgcFas+QkA9gfB66giR4DAVNktevA+lgyLshJgcrwGhgZHwuPuYXDX
+        5lC4Zs0emwFw3YYguHt7MPzdJxSGR0TAV8kxsORAPPij2Q+268HRfydqP+oZc/OBRf4nVJ0588eVJina
+        /AQAx0Dgd6hlqPMSMIjZI0dDow70qJjq1IuKRekb0yCjWQdHHfM0t1VtqFmo/hbM3xcVZ+nYb3T8RAIA
+        DdFA8FdUhIRNJFd5o+6x9vtjgc+ytPRXWuSXACBdEAxF5ZJxeUuHes6W3xyL+9+o8+bMbyjfBy9GvkMA
+        oGE3CPRFfYA6Skbm9J4/2tbfGgv7LlSZpaX/2IQvVGF+AoD0QNAf9RmqkIxtVdmM8ZnvMFiYvz9Ka2np
+        vzh7jWrMTwCQ9opgJCqZjH6VmH2T17n8rljUGyyZP/xYrKrMTwCQBwyeQbmhWlVs+gbUJtQjXH9HLOhv
+        LJmfCfzI/ZYfAoCyQfB71JeoDBUZPxE1AXUdn98Oi3kYqsOc+WsaauGTxCmqMz8BQL4weBD1k0JPDwyo
+        6ah7hfitjDv+LZae/s6Zy1RpfgKAcvIEP6BijR+7yM3wLai9qClCmd7E/I+haiyZ3y3fV7XmJwAoDwbX
+        o942Jg2ZDcR2iRpeY+ygNBh1jRi/BRbwfahyS+Znor5qOe8nAKgTCNcYG5QwT9ctqFRUox3NXmt8j1+P
+        moT6B/OZtNh/NxbvPagiS+bPrjgIg6PHqtr8BAD1guGPTGrOGD6ai9qM8jM2MWE+my1F1Rl3301XEa3G
+        f1Zr/HeyjK8evsZd+pmo91DPom53xN9mi/mLTh+D4Qq52YcAQIPGJfM/ZM38ZbUnYXzCf8j8BAAaCjP/
+        49be+avqT8GEpG/I+AQAGgoz/7Oo05bMf6q+Gj5P/o5MTwCgoTDzD7PUz4/R6YYa+DptBhmeAEBDYeaf
+        bCnh17Psn5zyA5mdAEBDQcZn7u9bYe3uRmbDb2Lyt2R0AgANBZn/JlSYNfOX1ByHjxL/SyYnANBQkPkf
+        RuVZMz9zhbeamnoQAGiowfyjUI3WzJ95Mhvejv2AzE0AoKGg9/0l1ozPKLokHl6NepeMTQCgoRDzM7He
+        VFvM75G/W/Uf9hAAaCjJ/O9Y+5SXUV1jPfyStZrMTACgoRDjX4/aYstT/3jNCfgi5XsyMgGAhkLM/wwq
+        3xbzp5fvoy/6CAA0FGL861DLURdsMf+uggB4OXIkGZgAQEMB5n8OVWCL8SvqKuFHw3wyLgGAhkLe9dda
+        y/JfXPKfzIJRcZ+SaQkANBRg/jdRR20xfmNTI/yW5wkvRY4gwxIAaMjc+H9GBdhifEYFpwrhP7TLTwCg
+        IXvjM3fyzUA122p+3yNBMDh6DJmUAEBD5uZ/BXXIVuMXny6BqbrZZE4CAA2ZG59p0Blsq/GZd33meI+e
+        +gQAGvI2/i2o1ahztpo/r6oAJqX8jwxJAKAhY+MPQH2LqrXV+MylnBtzd8CgqFFkRgIADZkavy/qI2v9
+        +Hu7luvd+M/IhAQAGjI2/3BUDhvjM916plOajwBAQ9bGfxWVwsb41fWnYcPB7fAKLfcJADRka3wmtx/P
+        xviM9hRFwAjNJ2Q4AgANGRs/mq3xU8sMMDFpKhmNAEBDpsZ/hYvxD1Xlw//0zmQwAgANmRr/LVQiW+Mz
+        Kb75+5bThzsEABoyNH0fY+ttA1vjM625lu5fR006CAA0ZGh85hz/A9R+tsYvrz0Jqw9shlejRpOZCAA0
+        ZGZ85gu9iajDbI3PFI1Lrivl9gkANGRq/Mlsk3s9xt98yBXejBlP5iEA0JDhUv8TLsZnlvrrDm6DN2LG
+        kWkIADRkaP53uSz1mc09xvi01CcA0JCn8ZnbdDVsjX+sphRW5GyizT0CAA0Zm/9zVAsb4x+pPgqLs9fS
+        cR4BgAAgc/NPY5vcc85cRgEeAgABQAHmf8TWG3aO15R1PfG53KrLrBKY0wBTvRX7PoyOn3hR72knwSeJ
+        U7r0Zep0+Cr1R5iSNrPrc2BGczOWdCUHGS3fv6HrtYPJFTAnDYx2HvYGj3y/LgUeDYMgkuBiLlclACgL
+        AD+xfec3VUNjQ9dTwVS1DbXA5/9JkqUIADIFwDYqXhIBQL0A+IGKl0QAUC8AmK68FVTAJAKAujcCD1AR
+        kwgA6oVAX2PTzi3GL/3aZFJ47agGo06gSo3x5RySXTWDXKQsIDDf+9+JeszY6Wck6kPUZ0Yx2YHvTTQb
+        tcB4qvD9FfrO5L8z1egr9Lqxgegg1FNGMauT+4y6zfjKchPNkPTG/wOZ5iOC+AtJQAAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
 </root>
